--- a/style.css
+++ b/style.css
@@ -10,6 +10,9 @@ html, body, h1, h2, h3, h4, h5, p {
     vertical-align: baseline;
     box-sizing: border-box;
 }
+*{
+    box-sizing: border-box;
+}
 
 body{
     background-color: hsl(206, 94%, 87%);
@@ -36,13 +39,36 @@ body{
 
 .side-nav {
     background-color: rgb(50, 173, 19);
-    height:100%;    
-
+    height:100%; 
 }
 
 .main-section{
     background-color: burlywood;
     width:70vw;
+    display: flex;
+    flex-direction: column;
+    padding:10rem;
+    
+}
+
+.form-group{
+    display: flex;
+    flex-direction: column;
+}
+
+.form-hgroup{
+    padding-bottom: 2rem;
+}
+
+.field-group{
+    display: flex;
+    flex-direction: column;
+    padding-bottom: .4rem;
+}
+
+.btn {
+    align-self: flex-end ;
+    
 }
 
 ul {
