--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body{
 #container {
     font-family: 'Ubuntu', sans-serif;
     display: flex;
-    background-color: rgb(121, 115, 115);
+    background-color: rgb(255, 255, 255);
     height: 75% ; 
     width: 75%;
     padding: 1.87rem;
@@ -40,13 +40,17 @@ body{
 
 .side-nav {
     padding-top: 3.5rem;
-    background-color: rgb(57, 72, 53);
+    background-color: rgb(255, 255, 255);
     height:100%; 
     border-radius: .8rem;
+    background-image: url("assets/images/bg-sidebar-desktop.svg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
 }
 
 .main-section{
-    background-color: burlywood;
+    background-color: rgb(255, 255, 255);
     width:70vw;
     display: flex;
     flex-direction: column;
@@ -56,6 +60,7 @@ body{
 .form-group{
     display: flex;
     flex-direction: column;
+    
 }
 
 .form-hgroup{
@@ -77,16 +82,16 @@ body{
 .field-group{
     display: flex;
     flex-direction: column;
-    padding-bottom: .4rem;
+    padding-bottom: 1.8rem;
 }
 
 .hgroup-p{
     color:hsl(231, 11%, 63%);
-    font-size:18px;
+    font-size:25px;
 }
 .hgroup-heading{
     color: hsl(213, 96%, 18%);
-    font-size: 30px;
+    font-size: 35px;
 }
 .btn {
     color: white;
