changed mouse cursor

--- a/style.css
+++ b/style.css
@@ -21,7 +21,6 @@ body{
     place-items: center;
     height: 100vh; 
     /* end of centerilizig */
-
 }
 
 #container {
@@ -32,12 +31,11 @@ body{
     width: 75%;
     padding: 1.87rem;
     border-radius: .8rem;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;;
 }
-
 .nav-header{
     width: 30vw;
 }
-
 .side-nav {
     padding-top: 3.5rem;
     background-color: rgb(255, 255, 255);
@@ -62,7 +60,6 @@ body{
     flex-direction: column;
     
 }
-
 .form-hgroup{
     padding-bottom: 2rem;
 }
@@ -75,8 +72,8 @@ body{
 }
 .form-input:hover {
     color:hsl(213, 96%, 18%);
+    cursor: pointer;
 }
-
 .form-label{
     color: hsl(213, 96%, 18%);
     padding-bottom: .2rem;
@@ -87,7 +84,6 @@ body{
     flex-direction: column;
     padding-bottom: 1.8rem;
 }
-
 .hgroup-p{
     color:hsl(231, 11%, 63%);
     font-size:25px;
@@ -107,6 +103,11 @@ body{
     width:8rem;
     height: 3rem;
     font-size: 18px;
+    cursor: pointer;
+}
+.btn:hover {
+    background-color:hsl(206, 82%, 68%);
+    border-color:hsl(206, 82%, 68%) ;
 }
 
 ul {
@@ -127,7 +128,6 @@ ul {
     text-align: center;
     font: 15px Arial, sans-serif;
 }
-
 .list-items {
     display: flex;
     align-items: center;
