--- a/style.css
+++ b/style.css
@@ -172,6 +172,7 @@ ul {
         width: 100%;
         padding: 0;
         border-radius: 0;
+        align-items: center;
     }
     .nav-header{
         width: 100%;
@@ -196,6 +197,7 @@ ul {
         width: 80%;
         display: flex;
         flex-direction: column;
+        padding: 2rem;
         
     }
 }
