--- a/style.css
+++ b/style.css
@@ -173,6 +173,7 @@ ul {
         padding: 0;
         border-radius: 0;
         align-items: center;
+        position: relative;
     }
     .nav-header{
         width: 100%;
@@ -198,6 +199,7 @@ ul {
         display: flex;
         flex-direction: column;
         padding: 2rem;
-        
+        position: absolute;
+        top: 170px;
     }
 }
