--- a/style.css
+++ b/style.css
@@ -174,6 +174,8 @@ ul {
         border-radius: 0;
         align-items: center;
         position: relative;
+        background-color: hsl(206, 94%, 87%);
+        box-shadow: none;
     }
     .nav-header{
         width: 100%;
@@ -200,6 +202,6 @@ ul {
         flex-direction: column;
         padding: 2rem;
         position: absolute;
-        top: 170px;
+        top: 10.625rem;
     }
 }
