--- a/secondpage.css
+++ b/secondpage.css
@@ -215,7 +215,58 @@ ul {
 .error-border{
     border: 2px solid hsl(354, 84%, 57%);
 }
-
+.card-group{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+.card{
+    height: 18vh;
+    width: 10vw;
+    background-color: rgb(26, 111, 208);
+    margin-right: 20px;
+}
+.grey-bar{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    background-color: hsl(231, 28%, 85%);
+    border-radius: 2rem;
+    margin-top: 2rem;
+}
+.buttons{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.btn-goback{
+    color: rgb(0, 0, 0);
+    background: none!important;
+    border: none;
+    padding: 0!important;
+    align-self: flex-start;
+    margin-top: 5rem;
+    width:8rem;
+    height: 3rem;
+    font-size: 18px;
+    cursor: pointer;
+}
+.grey-bar-month{
+    color: hsl(213, 96%, 18%);
+    margin: 1rem;
+}
+.grey-bar-year{
+    margin: 1rem;
+}
+.text-group{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-top: 6rem;
+    padding: 1rem;
+}
 /* media queries */
 /* Tablet view */
 @media screen and (min-width:579px) and (max-width: 1180px) {
