--- a/secondpage.css
+++ b/secondpage.css
@@ -222,18 +222,32 @@ ul {
     justify-content: center;
 }
 .card{
-    height: 18vh;
+    height: 16vh;
     width: 10vw;
-    background-color: rgb(201, 210, 221);
     border: 2px solid rgb(201, 210, 221);
+    border-radius: .3rem;
     margin-right: 20px;
-    
 }
 .card:hover{
     border: 2px solid blue;
+    cursor: pointer;
 }
 .card.selected{
     border: 2px solid blue;
+    cursor: pointer;
+}
+.card-label-text{
+    color:hsl(213, 96%, 18%);
+}
+.card-text{
+    color:hsl(231, 11%, 63%);
+    font-size: 14px;
+}
+.icon{
+    display: flex;
+    flex-direction: row;
+    padding-left: 1rem;
+    padding-top: 1rem;
 }
 .grey-bar{
     display: flex;
@@ -272,7 +286,7 @@ ul {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    margin-top: 6rem;
+    margin-top: 2rem;
     padding: 1rem;
 }
 
