--- a/secondpage.css
+++ b/secondpage.css
@@ -26,8 +26,8 @@ body{
 .switch {
     position: relative;
     display: inline-block;
-    width: 60px;
-    height: 34px;
+    width: 50px;
+    height: 25px;
   }
   
 /* Hide default HTML checkbox */
@@ -45,7 +45,7 @@ top: 0;
 left: 0;
 right: 0;
 bottom: 0;
-background-color: #ccc;
+background-color: hsl(213, 96%, 18%);
 -webkit-transition: .4s;
 transition: .4s;
 }
@@ -53,8 +53,8 @@ transition: .4s;
 .slider:before {
 position: absolute;
 content: "";
-height: 26px;
-width: 26px;
+height: 18px;
+width: 18px;
 left: 4px;
 bottom: 4px;
 background-color: white;
@@ -254,9 +254,11 @@ ul {
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    background-color: hsl(231, 28%, 85%);
-    border-radius: 2rem;
+    background-color: hsl(231, 100%, 99%);
+    border-radius: .5rem;
     margin-top: 2rem;
+    width: 32.7vw;
+    height: 4vh;
 }
 .buttons{
     display: flex;
@@ -264,7 +266,7 @@ ul {
     justify-content: space-between;
 }
 .btn-goback{
-    color: rgb(0, 0, 0);
+    color: hsl(213, 96%, 18%);
     background: none!important;
     border: none;
     padding: 0!important;
@@ -281,6 +283,7 @@ ul {
 }
 .grey-bar-year{
     margin: 1rem;
+    color:hsl(231, 11%, 63%);
 }
 .text-group{
     display: flex;
@@ -289,7 +292,6 @@ ul {
     margin-top: 2rem;
     padding: 1rem;
 }
-
 
 /* media queries */
 /* Tablet view */
