--- a/secondpage.css
+++ b/secondpage.css
@@ -360,6 +360,30 @@ ul {
     .labels-container{
        font-size: 20px;
     }
+    .card {
+        height: 16vh;
+        width: 17.8vw;
+        border: 2px solid rgb(201, 210, 221);
+        border-radius: 0.3rem;
+    }
+    .grey-bar {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        background-color: hsl(231, 100%, 99%);
+        border-radius: 0.5rem;
+        margin-top: 2rem;
+        width: 62vw;
+        height: 4vh;
+    }
+    .buttons {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        margin-top: 1rem;
+        width: 62vw;
+    }
 }
 
 /* Mobile view */
