--- a/secondpage.css
+++ b/secondpage.css
@@ -384,6 +384,13 @@ ul {
         margin-top: 1rem;
         width: 62vw;
     }
+    .text-group {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        margin-top: 3.5rem;
+        padding: 1rem;
+    }
 }
 
 /* Mobile view */
@@ -460,7 +467,67 @@ ul {
         color: hsl(231, 11%, 63%);
         font-size: 18px;
     }
-    btn {
+    .btn {
         margin-top: 6rem;
+    }
+    .card-group {
+        display: flex;
+        flex-direction: column;
+    }
+    .card {
+        display: flex;
+        flex-direction: row;
+        justify-content: left;
+        align-items: center;
+        height: 9vh;
+        width: 77vw;
+        border: 2px solid rgb(201, 210, 221);
+        border-radius: 0.3rem;
+    }
+    .icon {
+        display: flex;
+        flex-direction: row;
+        padding-left: 1rem;
+        padding-top: 0;
+    }
+    .text-group {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        margin-top:0;
+        padding: 1rem;
+    }
+    .card:nth-child(-n+2) {
+        margin-right: 0; /* Add margin-right to the first and second cards */
+    }
+    .grey-bar {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        background-color: hsl(231, 100%, 99%);
+        border-radius: 0.5rem;
+        margin-top: 2rem;
+        width: 77vw;
+        height: 4vh;
+    }
+    .buttons {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        margin-top: 1rem;
+        width: 90vw;
+    }
+    .btn-goback {
+        color: hsl(213, 96%, 18%);
+        background: none!important;
+        border: none;
+        padding: 0!important;
+        align-self: flex-start;
+        margin-top: 6rem;
+        width: 8rem;
+        height: 3rem;
+        font-size: 18px;
+        cursor: pointer;
     }
 }
